# mpv-client-dyn

./: Cargo.toml  README.md
src/: ffi.rs  format.rs  lib.rs
